<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	<LinearLayout
		style="@style/main_linearlayout">
		<LinearLayout
			style="@style/question_linearlayout">
			<TextView
				style="@style/question_form"
				android:text="@string/question1"/>
			<RadioGroup
				android:id="@+id/FirstRadioGroup"
				style="@style/radio_group_form">
				<RadioButton
					android:id="@+id/q1_a1_radio_button"
					style="@style/radio_button"/>
				<RadioButton
					android:id="@+id/q1_a2_radio_button"
					style="@style/radio_button"/>
				<RadioButton
					android:id="@+id/q1_a3_radio_button"
					style="@style/radio_button"/>
			</RadioGroup>
			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:orientation="horizontal">
				<ImageView
					android:src="@drawable/nougat"
					style="@style/radio_image_view"/>
				<ImageView
					android:src="@drawable/kitkat"
					style="@style/radio_image_view"/>
				<ImageView
					android:src="@drawable/marshmallow"
					style="@style/radio_image_view"	/>
			</LinearLayout>	
		</LinearLayout>
		<LinearLayout
			style="@style/question_linearlayout">
			<TextView
				style="@style/question_form"
				android:text="@string/question2"/>
			<CheckBox
				android:id="@+id/hammer_checkbox"
				android:text="@string/q2_answer1"
				style="@style/checkbox_form"/>
			<CheckBox
				android:id="@+id/spoon_checkbox"
				android:text="@string/q2_answer2"
				style="@style/checkbox_form"/>
			<CheckBox
				android:id="@+id/saw_checkbox"
				android:text="@string/q2_answer3"
				style="@style/checkbox_form"/>		
			<CheckBox
				android:id="@+id/nails_checkbox"
				android:text="@string/q2_answer4"
				style="@style/checkbox_form"/>	
		</LinearLayout>
		<LinearLayout
			style="@style/question_linearlayout">
			<TextView
				style="@style/question_form"
				android:text="@string/question3"/>
			<ImageView
				style="@style/single_image"
				android:src="@drawable/google"/>
			<EditText
				android:id="@+id/question3_edittext"
				style="@style/edittext_form"/>
		</LinearLayout>
		<LinearLayout
			style="@style/question_linearlayout">
			<TextView
				style="@style/question_form"
				android:text="@string/question4"/>
			<CheckBox
				android:id="@+id/french_checkbox"
				android:text="French"
				style="@style/checkbox_form"/>
			<CheckBox
				android:id="@+id/cplusplus_checkbox"
				android:text="C++"
				style="@style/checkbox_form"/>
			<CheckBox
				android:id="@+id/english_checkbox"
				android:text="English"
				style="@style/checkbox_form"/>
			<CheckBox
				android:id="@+id/java_checkbox"
				android:text="Java"
				style="@style/checkbox_form"/>
		</LinearLayout>
		<LinearLayout
			style="@style/question_linearlayout">
			<TextView
				style="@style/question_form"
				android:text="@string/question5"/>
			<ImageView
				android:src="@drawable/uber"
				style="@style/single_image"/>
			<EditText
				android:id="@+id/question5_edittext"
				style="@style/edittext_form"/>
		</LinearLayout>
		<LinearLayout
			style="@style/question_linearlayout">
			<TextView
				style="@style/question_form"
				android:text="@string/question6"/>
			<RadioGroup
				style="@style/radio_group_form">
				<RadioButton
					android:id="@+id/q6_a1_radio_button"
					android:text="@string/q6_answer1"
					style="@style/radio_button"/>
				<RadioButton
					android:id="@+id/q6_a2_radio_button"
					android:text="@string/q6_answer2"
					style="@style/radio_button"/>
				<RadioButton
					android:id="@+id/q6_a3_radio_button"
					android:text="@string/q6_answer3"
					style="@style/radio_button"/>
			</RadioGroup>
			<Button
				android:id="@+id/submit_button"
				style="@style/button_form"
				android:onClick="SubmitAnswer"/>
		</LinearLayout>
	</LinearLayout>
</ScrollView>

